--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav {
 .navigation .logo {
   background-color: var(--accent);
   height: 100px;
-  width: 100px;
+  width: 300px;
 }
 .navigation .menu ul {
   display: flex;
@@ -84,12 +84,13 @@ nav {
   display: flex;
   width: 33%;
   height: 100%;
-  background-color: rgba(1, 1, 1, 0.5);
+  /* background-color: rgba(1, 1, 1, 0.5); */
+  background-color: rgba(255, 255, 255, 0.75);
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: white;
+  color: black;
 }
 
 .section {
